on macros page, remove lazy-cons and add lazy-seq, closes #650

--- a/content/reference/macros.adoc
+++ b/content/reference/macros.adoc
@@ -49,7 +49,7 @@ Looping (see also <<sequences#,Sequences>>): https://clojure.github.io/clojure/c
 Working with vars (see also <<vars#,Vars and Environment>>): https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/ns[ns] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/declare[declare] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmacro[defmacro] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/definline[definline] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmethod[defmethod] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmulti[defmulti] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn-[defn-] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defonce[defonce] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defstruct[defstruct]
 Arranging code differently: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2E%2E[..] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doto[doto] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/-%3e[pass:[->]]
 Dynamic scopes (see also <<vars#,Vars and Environment>>): https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/binding[binding] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/locking[locking] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/time[time] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-in-str[with-in-str] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-local-vars[with-local-vars] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-open[with-open] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-out-str[with-out-str] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-precision[with-precision]
-Creating lazy things (see also <<sequences#,Sequences>>): https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/lazy-cat[lazy-cat] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/lazy-cons[lazy-cons] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/delay[delay]
+Creating lazy things (see also <<sequences#,Sequences>>): https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/lazy-seq[lazy-seq] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/lazy-cat[lazy-cat] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/delay[delay]
 <<java_interop#,Java interop>> macros: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2E%2E[..] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/amap[amap] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/areduce[areduce] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-class[gen-class] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/gen-interface[gen-interface] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy[proxy] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy-super[proxy-super] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/memfn[memfn]
 Documenting code: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/assert[assert] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/comment[comment] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/doc[doc]
 Transactions: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dosync[dosync] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/io![io!]
