change tools.build example to use --release instead of -source and -target

--- a/content/guides/tools_build.adoc
+++ b/content/guides/tools_build.adoc
@@ -254,7 +254,7 @@ This build creates a jar with classes compiled from Java sources and your Clojur
   (b/javac {:src-dirs ["java"]
             :class-dir class-dir
             :basis basis
-            :javac-opts ["-source" "8" "-target" "8"]}))
+            :javac-opts ["--release" "11"]}))
 
 (defn jar [_]
   (compile nil)
