Fix fulcro-rad link

--- a/content/news/2023/06/02/deref.adoc
+++ b/content/news/2023/06/02/deref.adoc
@@ -41,7 +41,7 @@ New releases and tools this week:
 * https://github.com/quoll/tiara[tiara] 0.2.1 - A small data structure library
 * https://github.com/babashka/babashka[babashka] 1.3.180 - Native, fast starting Clojure interpreter for scripting
 * https://github.com/NoahTheDuke/splint[splint] https://github.com/NoahTheDuke/splint/releases/tag/v1.7.0[1.7.0] - A Clojure linter focused on style and code shape
-* https://github.com/fulcrologic/fulcro-radd[fulcro-radd] 1.5.0 - Fulcro Rapid Application Development
+* https://github.com/fulcrologic/fulcro-rad[fulcro-rad] 1.5.0 - Fulcro Rapid Application Development
 * https://github.com/hlship/cli-tools[cli-tools] 0.7 - CLIs and subcommands for Clojure or Babashka
 * https://github.com/clj-kondo/clj-kondo[clj-kondo] 2023.05.26 - Static analyzer and linter for Clojure code that sparks joy
 * https://github.com/clojure-emacs/clojure-ts-mode[clojure-ts-mode] 0.1.0 - The next generation Clojure major mode for Emacs, powered by TreeSitter
