fix survey writeup

--- a/content/news/2023/06/16/deref.adoc
+++ b/content/news/2023/06/16/deref.adoc
@@ -9,7 +9,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Highlights
 
-The annual Stack Overflow https://survey.stackoverflow.co/2023/[Developer's Survey results] are out with some interesting new takes this year. In particular, the Loved/Dreaded/Wanted chart is replaced with https://survey.stackoverflow.co/2023/#technology-admired-and-desired[Admired and Desired] which tries to compare previous users that want to keep using a technology ("admired") and those who want to use a technology in the year ahead ("desired"), and use the difference. This methodology seems a little dubious, but I'll just note that Clojure is in the top 5 "desired" technologies, and Datomic was the 2nd most "desired" database. Clojure was again in the top 5 https://survey.stackoverflow.co/2023/#technology-top-paying-technologies[highest-paying] technology (has been #1 in the past).
+The annual Stack Overflow https://survey.stackoverflow.co/2023/[Developer's Survey results] are out with some interesting new takes this year. In particular, the Loved/Dreaded/Wanted chart is replaced with https://survey.stackoverflow.co/2023/#technology-admired-and-desired[Admired and Desired] which tries to compare previous users that want to keep using a technology ("admired") and those who want to use a technology in the year ahead ("desired"), and use the difference. This methodology seems a little dubious, but I'll just note that Clojure is in the top 5 "admired" technologies, and Datomic was the 2nd most "admired" database. Clojure was again in the top 5 https://survey.stackoverflow.co/2023/#technology-top-paying-technologies[highest-paying] technology (has been #1 in the past).
 
 == Podcasts and videos
 
