add more breakouts to survey data

--- a/content/news/2023/06/30/state-of-clojure-2023.adoc
+++ b/content/news/2023/06/30/state-of-clojure-2023.adoc
@@ -5,9 +5,16 @@ Alex Miller
 
 Since 2010, the Clojure community survey has provided an annual heartbeat of how people are using Clojure and why. Thanks everyone for continuing to participate in providing this important data.
 
-You can find the complete results from this and former years here:
+Results from 2023:
 
-* https://www.surveymonkey.com/stories/SM-_2BH3b49f_2FXEkUlrb_2BJSThxg_3D_3D/[2023]
+* https://www.surveymonkey.com/stories/SM-_2BH3b49f_2FXEkUlrb_2BJSThxg_3D_3D/[Full results]
+* https://www.surveymonkey.com/stories/SM-f2XkbSKiS_2BDdJShL141pOQ_3D_3D/[Full results, single column]
+* https://download.clojure.org/stateofclojure/2023/Data_Q5_230630.pdf[Open responses for Q5, which resources did you use to learn Clojure]
+* https://download.clojure.org/stateofclojure/2023/Data_Q7_230630.pdf[Open responses for Q7, what are your biggest challenges in using Clojure now]
+* https://download.clojure.org/stateofclojure/2023/Data_Q32_230630.pdf[Open responses for Q32, who do you appreciate in the Clojure community] 
+
+Results from former years:
+
 * https://www.surveymonkey.com/results/SM-QRiy0fSu3bmDK_2FSNMplVJw_3D_3D/[2022]
 * https://www.surveymonkey.com/results/SM-S2L8NR6K9[2021]
 * https://www.surveymonkey.com/results/SM-CDBF7CYT7/[2020]
