--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -52,6 +52,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * BaseFEX
 * Beanstalk
 * Beary Innovative
+* Belit
 * BeOpinion
 * bevuta
 * BGPworks
