--- a/content/news/2023/07/20/deref.adoc
+++ b/content/news/2023/07/20/deref.adoc
@@ -36,7 +36,7 @@ I've mentioned work on variadic invocation in the past and while we've made some
 == Blogs, articles, and projects
 
 * https://hackernoon.com/why-my-brain-is-wired-for-clojure[Why My Brain Is Wired for Clojure] - Adam Schmideg
-* https://faster-than-light-memes.xyz/conversation-1.html[No Iterations] - Benjamin Scherdtner
+* https://faster-than-light-memes.xyz/conversation-1.html[No Iterations] - Benjamin Schwerdtner
 * https://jank-lang.org/blog/2023-07-08-object-model/[jank development update - A faster object model] - Jeaye Wilkerson
 * https://medium.com/@nnnsadeh/how-to-integrate-tailwind-into-your-react-native-clojurescript-expo-app-61bf97afd6b9[How to integrate Tailwind into your React Native/ClojureScript/Expo App] - Nimrod Sadeh
 * https://code.thheller.com/blog/shadow-cljs/2023/07/13/the-lost-arts-of-cljs-frontend.html[The Lost Arts of CLJS Frontend] - Thomas Heller
