--- a/content/dev/contributor_agreement.adoc
+++ b/content/dev/contributor_agreement.adoc
@@ -7,7 +7,7 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-Following the lead of other open source projects, the Clojure project requires contributors to jointly assign their copyright on contributed code. The https://secure.na1.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (CA) gives Rich Hickey and the contributor joint copyright interests in the code: the contributor retains copyrights while also granting those rights to Rich Hickey as the open source project sponsor.
+Following the lead of other open source projects, the Clojure project requires contributors to jointly assign their copyright on contributed code. The https://na1.documents.adobe.com/public/esignWidget?wid=CBFCIBAA3AAABLblqZhCosNUT5B8zx-HcOuj4okMO3a_2BCBfEsDwBu4Gi5iazVfgy9rFxWAKKy-9iMr42lo*[Contributor Agreement] (CA) gives Rich Hickey and the contributor joint copyright interests in the code: the contributor retains copyrights while also granting those rights to Rich Hickey as the open source project sponsor.
 
 The CA is derived from the Oracle Contributor Agreement (OCA), used for OpenJDK, Netbeans and OpenSolaris projects and others. There is a good http://www.oracle.com/technetwork/oca-faq-405384.pdf[OCA FAQ] answering many questions.
 
@@ -15,7 +15,7 @@ The CA does not change the rights or responsibilities of the Clojure community u
 
 == Instructions for submitting the agreement
 
-* Fill out and submit the https://secure.na1.echosign.com/public/hostedForm?formid=95YMDL576B336E[Contributor Agreement] (an online e-form)
+* Fill out and submit the https://na1.documents.adobe.com/public/esignWidget?wid=CBFCIBAA3AAABLblqZhCosNUT5B8zx-HcOuj4okMO3a_2BCBfEsDwBu4Gi5iazVfgy9rFxWAKKy-9iMr42lo*[Contributor Agreement] (an online e-form)
 
 [[contributors]]
 == Contributors
