--- a/content/news/2023/07/28/deref.adoc
+++ b/content/news/2023/07/28/deref.adoc
@@ -5,7 +5,7 @@ Alex Miller
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure ecosystem (feed: https://clojure.org/feed.xml[RSS])). Thanks to Anton Fonarev for link aggregation.
+Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure ecosystem (feed: https://clojure.org/feed.xml[RSS]). Thanks to Anton Fonarev for link aggregation.
 
 == Podcasts and videos
 
