--- a/content/guides/install_clojure.adoc
+++ b/content/guides/install_clojure.adoc
@@ -38,16 +38,16 @@ To install with the Linux script installer:
 
 [source,shell]
 ----
-curl -O https://download.clojure.org/install/linux-install-1.11.1.1347.sh
-chmod +x linux-install-1.11.1.1347.sh
-sudo ./linux-install-1.11.1.1347.sh
+curl -L -O https://github.com/clojure/brew-install/releases/latest/download/linux-install.sh
+chmod +x linux-install.sh
+sudo ./linux-install.sh
 ----
 
 To install to a custom location (like `/opt/infrastructure/clojure`), use the option `--prefix`:
 
 [source,shell]
 ----
-sudo ./linux-install-1.11.1.1347.sh --prefix /opt/infrastructure/clojure
+sudo ./linux-install.sh --prefix /opt/infrastructure/clojure
 ----
 
 You may also want to extend the MANPATH in `/etc/man_db.conf` to include the manual pages:
@@ -70,16 +70,16 @@ To install with the POSIX script installer:
 
 [source,shell]
 ----
-curl -O https://download.clojure.org/install/posix-install-1.11.1.1347.sh
-chmod +x posix-install-1.11.1.1347.sh
-sudo ./posix-install-1.11.1.1347.sh
+curl -L -O https://github.com/clojure/brew-install/releases/latest/download/posix-install.sh
+chmod +x posix-install.sh
+sudo ./posix-install.sh
 ----
 
 To install to a custom location (like `/opt/infrastructure/clojure`), use the option `--prefix`:
 
 [source,shell]
 ----
-sudo ./posix-install-1.11.1.1347.sh --prefix /opt/infrastructure/clojure
+sudo ./posix-install.sh --prefix /opt/infrastructure/clojure
 ----
 
 You may also want to extend the MANPATH in `/etc/man_db.conf` to include the manual pages:
