--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,11 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.11.1/CHANGELOG.md[repo changelog].
 
+=== 1.11.1.1386 (Aug 14, 2023) [[v1.11.1.1386]]
+
+* CLI releases are now published to GitHub under https://github.com/clojure/brew-install
+* The download archive is still available but will be treated as a mirror (and configured that way in brew)
+
 === 1.11.1.1347 (May 31, 2023) [[v1.11.1.1347]]
 
 * With -X or -T accept `-` as a trailing argument to read the remainder of args from stdin
