fix company name

--- a/content/news/2023/08/18/deref.adoc
+++ b/content/news/2023/08/18/deref.adoc
@@ -10,7 +10,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 == Blogs, articles, and projects
 
 * https://www.tamizhvendan.in/blog/announcing-honeyeql-1.0/[Announcing HoneyEQL 1.0] - Tamizhvendan S
-* https://blog.datomic.com/2023/08/datomic-local-is-released.html[Datomic Local is Released] - Cognitect
+* https://blog.datomic.com/2023/08/datomic-local-is-released.html[Datomic Local is Released] - Nubank
 * https://blog.redplanetlabs.com/2023/08/15/how-we-reduced-the-cost-of-building-twitter-at-twitter-scale-by-100x/[How we reduced the cost of building Twitter at Twitter-scale by 100x] - Nathan Marz (Red Planet Labs)
 * https://widdindustries.com/blog/taming-a-clojurescript-megabuild-with-shadow-and-kaocha.html[Taming a Clojurescript mega-project with Shadow and Kaocha] - Henry Widd
 
