--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,10 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.11.1/CHANGELOG.md[repo changelog].
 
+=== 1.11.1.1409 (Aug 22, 2023) [[v1.11.1.1409]]
+
+* No changes
+
 === 1.11.1.1405 (Aug 22, 2023) [[v1.11.1.1405]]
 
 * CLI releases on GitHub now have .sha256 files for the binaries
