--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,7 +22,11 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.11.1/CHANGELOG.md[repo changelog].
 
-=== 1.11.1.1409 (Aug 22, 2023) [[v1.11.1.1409]]
+=== 1.11.1.1413 (Aug 26, 2023) [[v1.11.1.1413]]
+
+* No changes
+
+=== 1.11.1.1409 (Aug 25, 2023) [[v1.11.1.1409]]
 
 * No changes
 
