--- a/content/news/2023/09/01/deref.adoc
+++ b/content/news/2023/09/01/deref.adoc
@@ -23,6 +23,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 * https://ag91.github.io/blog/2023/08/28/an-easier-way-to-try-cljs-libraries-with-shadow-cljs-ob-clojure-and-cider/[An easier way to try Cljs libraries with shadow-cljs ob-clojure and cider] - Andrea Giugliano
 * https://corfield.org/blog/2023/08/31/long-term-funding-4/[Long-Term Funding, Update #4] - Sean Corfield
 * https://blog.michielborkent.nl/oss-updates-aug-2023.html[OSS updates August 2023] - Michiel Borkent
+* https://gist.github.com/bsless/fb79601eb2bfdee85ebf4663dbc7bb1b[Clojure app startup performance] - Ben Sless
 
 == Libraries and Tools
 
